2009-06-19  svu

	* libxklavier/xklavier_config.c, libxklavier/xklavier_config_iso.c,
	libxklavier/xklavier_private.h: use xml files with exotic layouts

2009-06-02  svu

	* libxklavier/xklavier_config_iso.c: changed g_snprintf to more
	semantically correct g_strlcpy, just to eliminate the warning.
	* libxklavier/xklavier_props.c: fixed potential crash, reassigning the
	pointer after realloc (credits go to Canonical)

2009-05-28  svu

	* libxklavier/xklavier_config.c: fixed handling of translated XML
	entities &lt; / &gt / &amp;.
	http://bugs.freedesktop.org/show_bug.cgi?id=21924

2009-05-14  svu

	* autogen.sh, Makefile.am: fixing the build process (thanks to
	Marc-André Lureau)

2009-04-23  Federico Mena Quintero  <federico@novell.com>

	https://bugs.freedesktop.org/show_bug.cgi?id=21365 - Make sure
	libxklavier's X error handler still runs, even if the XKB
	extension is not present.
	* libxklavier/xklavier_evt.c (xkl_process_error): Fix the
	prototype to match XErrorHandler, so that we don't have to use
	casts when using XSetErrorHandler().
	* libxklavier/xklavier_xkb.c (xkl_xkb_init): In case XKB is not
	present, do not reset the X error handler here...
	* libxklavier/xklavier.c (xkl_engine_constructor): ... but do it
	here instead in case neither the XKB nor xmodmap modules can be
	initialized.  This way if either succeeds, libxklavier will have
	its own X error handler present, which is needed to filter out
	"harmless" errors like BadWindow for disappearing windows.

2009-04-06 svu

	* libxklavier/Makefile.am, tests/Makefile.am: adding -lX11 to .la
	file, http://bugs.freedesktop.org/show_bug.cgi?id=20243

2009-03-18 svu

	* Makefile.am, gtk-doc.make: unneeded external file should not be in dist/CVS
	* configure.in, NEWS: preparing 3.9

2009-03-10 svu

	* libxklavier/xklavier_evt.c: The X11 error processing is more 
	robust in relation to the missing engine (during the 
	initialization)

2009-03-09  svu
